--- a/UI/style.css
+++ b/UI/style.css
@@ -4,40 +4,56 @@
     padding: 0;
 }
 
+html{
+    font-size: 12px;
+}
+
+@media(max-width: 600px){
+    html{
+        font-size: 10px;
+    }
+}
+
+@media(min-width: 1900px){
+    html{
+        font-size: 16px;
+    }
+}
+
 header{
     position: absolute;
     float:left;
     vertical-align:middle;
     clear:both;
-    height:15%;
+    height:8rem;
     background: rgba(51, 0, 102, 0.15);
     width: 100%;
     font-family: Amiko;
 }
 .logo{
     position:absolute;
-    top: 10%;
-    left: 15%;
-    width: 70px;
-    height: 70px;
+    top: 1rem;
+    left: 13.5rem;
+    width: 6rem;
+    height: 6rem;
 }
 .TW{
     text-align: center;
     color: rgba(51, 0, 102, 1);
-    font-size: 60px;
-    letter-spacing: 30%;
+    font-size: 5rem;
+    letter-spacing: 0.7rem;
     font-weight: 500;
-    margin: 10px;
+    margin: 0.9rem;
 }
 .buttonEXIT{
     position: absolute;
     text-align: center;
-    top: 25%;
-    right: 15%;
-    font-size:20px;
-    border-radius: 20px;
-    width: 120px;
-    height: 40px;
+    top: 2.5rem;
+    right: 10.5rem;
+    font-size:1.6rem;
+    border-radius: 1.6rem;
+    width: 10rem;
+    height: 3rem;
     background-color: rgba(51, 0, 102, 1);
     color: rgba(255, 255, 255, 1);
 }
@@ -48,7 +64,7 @@ footer{
     float:left;
     vertical-align:middle;
     clear:both;
-    height:10%;
+    height:7rem;
     background: rgba(51, 0, 102, 0.25);
     color: rgb(0, 0, 0);
     width: 100%;
@@ -56,233 +72,225 @@ footer{
 }
 .Tw{
     position:absolute;
-    top: 30%;
-    left:14%;
-    font-size:20px;
+    top: 3rem;
+    left:12rem;
+    font-size:2rem;
 }
 .PV{
-    position:absolute;
-    top: 15%;
-    left:30%;
-    font-size:15px;
+    position: absolute;
+    top: 3rem;
+    left: 27rem;
+    font-size:1rem;
 }
 .Ch{
     text-align: right;
-    right: 15%;
-    top: 15%;
+    right: 10.5rem;
+    top: 2.5rem;
     position:absolute;
-    font-size:14px;
+    font-size:1rem;
 }
 
 .menu{
     position: absolute;
-    top:15%;
-    left:0;
-    width: 27%;
-    height: 75%;
+    top:8rem;
+    bottom: 7rem;
+    width: 25rem;
     background:  rgba(153, 153, 153, 0.15);
     overflow: auto;
 }
 
 .profile{
     position: relative;
-    top: 5%;
-    left: 40%;
-    width: 53%;
-    height: 23%;
+    top: 2rem;
+    left: 10rem;
+    width: 13rem;
+    height: 9rem;
     background: rgba(51, 0, 102, 0.5);
-    border-radius: 5%;
+    border-radius: 1rem;
 }
 .profile img{
     position:relative;
-    margin-top: 5%;
-    margin-left: 5%;
-    width: 30%;
-    height: 50%;
+    margin-top: 0.7rem;
+    margin-left: 0.7rem;
+    width: 5rem;
+    height: 5rem;
     border-radius: 50%;
 }
 .userName{
     position:relative;
     text-align: left;
-    margin-top: 4%;
-    margin-left: 5%;
-    font-size: 1em;
+    margin-top: 0.7rem;
+    margin-left: 0.7rem;
+    font-size: 1rem;
     color: rgba(0, 0, 0, 1);
     font-family: Amiko;
 } 
 
 .filters{
     position: relative;
-    top: 7%;
-    bottom: 10%;
-    left:40%;
-    width: 53%;
-    height: 65%;
+    top: 3rem;
+    left:10rem;
+    width: 13rem;
+    height: 23rem;
     background: rgba(51, 0, 102, 0.3);
-    border-radius: 5%;
+    border-radius: 1rem;
 }
 .filtersHeader{
     position: relative;
-    padding-top: 5%;
+    padding-top: 1rem;
     text-align: center;
-    font-size: 1em;
+    font-size: 1.3em;
     color: rgba(51, 0, 102, 1);
     font-family: Amiko;
 }
 .filterDate{
     text-align: left;
-    padding-left: 5%;
-    padding-top: 5%;
-    font-size: 14px;
+    padding-left: 0.7rem;
+    padding-top: 0.1rem;
+    font-size: 1.1rem;
     color: rgba(51, 0, 102, 1);
     font-family: Amiko;
 }
 .from{
     text-align: left;
-    padding-left: 5%;
-    font-size: 12px;
+    padding-left: 0.75rem;
+    font-size: 0.9rem;
     color: rgba(51, 0, 102, 1);
     font-family: Amiko;
 }
 .to{
     text-align: left;
-    padding-left: 5%;
-    font-size: 12px;
+    padding-left: 0.75rem;
+    font-size: 0.9rem;
     color: rgba(51, 0, 102, 1);
     font-family: Amiko;
 }
 .data{
     position: absolute;
     text-align: right;
-    right: 10%;
-    margin-top: 0px;
-    font-size: 12px;
+    right: 0.75rem;
+    font-size: 0.7rem;
     color: rgb(146, 143, 143);
     background-color: white;
     font-family: Amiko;
     width: 60%;
     resize: none;
-    height: 5%;
+    height: 1rem;
     border: none;
-    border-radius: 7px;
+    border-radius: 1rem;
 }
 .filterUsername{
-    position: absolute;
+    position: relative;
     text-align: left;
-    left: 5%;
-    top: 35%;
-    font-size: 14px;
+    margin-left: 0.7rem;
+    margin-top: 0.7rem;
+    font-size: 1.1rem;
     color: rgba(51, 0, 102, 1);
     font-family: Amiko;
 }
 .text{
     position: relative;
-    margin-right: 10%;
-    margin-top: 2%;
-    font-size: 12px;
+    margin-top: 0.2rem;
+    font-size: 1rem;
     color: rgb(146, 143, 143);
     background-color: white;
     font-family: Amiko;
     resize: none;
-    width: 90%;
-    height: 5%;
+    width: 11.5rem;
+    height: 3rem;
     border: none;
-    border-radius: 8px;
+    border-radius: 0.8rem;
 }
 .filterHashtags{
-    position: absolute;
+    position: relative;
     text-align: left;
-    left: 5%;
-    top: 55%;
-    font-size: 14px;
+    margin-left: 0.7rem;
+    margin-top: 0.7rem;
+    font-size: 1.1rem;
     color: rgba(51, 0, 102, 1);
     font-family: Amiko;
 }
 
 .find{
-    position: absolute;
-    top: 80%;
-    left: 25%;
+    position: relative;
+    top: 1rem;
+    left: 3.5rem;
     text-align: center;
-    font-size:1em;
-    width: 50%;
-    height: 10%;
+    font-size:1rem;
+    width: 6rem;
+    height: 2.5rem;
     font-family: Amiko;
     color: rgba(255, 255, 255, 1);
     background-color: rgba(51, 0, 102, 1);
-    border-radius: 20px;
+    border-radius: 2rem;
 }
 
 .buttonNewPost{
     position: absolute;
-    right: 15%;
-    bottom: 15%;
-    border-radius: 50px;
-    width: 7%;
-    height: 12%;
+    right: 12.5rem;
+    bottom: 15rem;
+    border-radius: 50%;
+    width: 6rem;
+    height: 6rem;
     background-color: rgba(51, 0, 102, 0.3);
 }
 .buttonNewPost img{
     position:relative;
-    width: 80%;
-    height: 80%;
+    width: 4.5rem;
+    height: 4.5rem;
     border-radius: 50%;
 }
 
 main{
     position:absolute;
-    top:  100px;
-    left: 27%;
-    width: 73%;
-    height: 73%;
+    top: 8rem;
+    bottom: 7rem;
+    left: 25rem;
+    width: calc(100% - 25rem);
     overflow: auto;
 }
 
-.post
-{
+.post{
     position: relative;
-    margin-top: 2%;
-    margin-left: 2%;
-    padding-bottom: 2%;
-    border-radius: 10px;
+    margin: 1rem;
+    border-radius: 0.8rem;
     width: 65%;
     background: rgba(153, 153, 153, 0.25);  
 }
 .photoUser{
     position: relative;
-    margin-left: 2%;
-    margin-top: 2%;
-    width: 10%;
-    height: 15%;
+    margin-left: 0.5rem;
+    margin-top: 0.5rem;
+    width: 4rem;
+    height: 4rem;
     border-radius: 50%;
 }
 .name{
     display: inline;
     position: absolute;
-    margin-left: 3%;
-    top: 10%;
-    font-size: 18px;
+    left: 5.5rem;
+    top: 1.5rem;
+    font-size: 1.5rem;
     color: rgba(51, 0, 102, 1);
     font-family: Amiko;
 }
 .time{
-    position: absolute;
-    top: 10%;
     display: inline;
+    position: absolute;
+    top: 1.9rem;
     text-align: right;
-    right: 5%;
-    padding-top: 0px;
-    font-size: 14px;
+    right: 1rem;
+    font-size: 1rem;
     color: rgba(51, 0, 102, 1);
     font-family: Amiko;
 }
 .twitt{
     position: relative;
-    margin-top: 1%;
-    margin-left: 2%;
+    top: 0.5rem;
+    left: 1rem;
     width: 90%;
     height: auto;
-    font-size: 18px;
+    font-size: 1.5rem;
     color:  black;
     background: unset;
     font-family: Amiko;
@@ -297,9 +305,10 @@ main{
 }
 .tag{
     position: relative;
-    padding-bottom: 2%;
-    padding-left: 2%;
-    font-size: 14px;
+    padding-top: 1rem;
+    padding-bottom: 2.5rem;
+    left: 1rem;
+    font-size: 1.3rem;
     width: 90%;
     height: auto;
     color: rgba(51, 0, 102, 1);
@@ -311,55 +320,55 @@ main{
 }
 .buttonLike{
     position: absolute; 
-    bottom: 10%;
+    bottom: 1rem;
     left: 90%;
     right: 5%;
-    border-radius: 30%;
+    border-radius: 0.5rem;
     width: 5%;
     background-color: unset;
 }
 .buttonLike img{
-    position:relative;
+    position: relative;
     width: 100%;
-    border-radius: 30%;
+    border-radius: 0.5rem;
 }
 .buttonEdit{
     position: absolute;
-    bottom: 10%;
-    left: 3%;
-    border-radius: 30%;
-    width: 3%;
+    bottom: 1rem;
+    left: 2rem;
+    border-radius: 0.5rem;
+    width: 1.5rem;
     background-color: unset;
 }
 .buttonEdit img{
-    position:relative;
+    position: relative;
     width: 100%;
-    border-radius: 10%;
+    border-radius: 0.5rem;
 }
 .buttonDelete{
     position: absolute; 
-    bottom: 10%;
-    left: 7%;
-    border-radius: 30%;
-    width: 3%;
+    bottom: 1rem;
+    left: 4rem;
+    border-radius: 0.5rem;
+    width: 1.5rem;
     background-color: unset;
 }
 .buttonDelete img{
-    position:relative;
+    position: relative;
     width: 100%;
-    border-radius: 10%;
+    border-radius: 0.5rem;
 }
 
 .buttonMore{
     position: relative;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    left: 25%;
+    margin-top: 0.5rem;
+    margin-bottom: 1.2rem;
+    left: 28%;
     text-align: center;
-    font-size:16px;
-    width: 15%;
+    font-size:1.3rem;
+    width: 10rem;
     font-family: Amiko;
     color: rgba(51, 0, 102, 1);
     background-color: rgba(51, 0, 102, 0.15);
-    border-radius: 20px;
+    border-radius: 10rem;
 }
