--- a/Twittolina/src/main/webapp/resources/css/style.css
+++ b/Twittolina/src/main/webapp/resources/css/style.css
@@ -46,6 +46,21 @@ header{
     margin: 0.9rem;
 }
 .buttonEXIT{
+    visibility: hidden;
+    outline: 0;
+    position: absolute;
+    text-align: center;
+    top: 2.5rem;
+    right: 10.5rem;
+    font-size:1.6rem;
+    border-radius: 1.6rem;
+    width: 10rem;
+    height: 3rem;
+    background-color: rgba(51, 0, 102, 1);
+    color: rgba(255, 255, 255, 1);
+}
+.buttonENTER{
+    outline: 0;
     position: absolute;
     text-align: center;
     top: 2.5rem;
@@ -100,6 +115,7 @@ footer{
 }
 
 .profile{
+    visibility: hidden;
     position: relative;
     top: 2rem;
     left: 10rem;
@@ -212,6 +228,7 @@ footer{
 }
 
 .find{
+    outline: 0;
     position: relative;
     top: 1rem;
     left: 3.5rem;
@@ -226,7 +243,9 @@ footer{
 }
 
 .buttonNewPost{
-    position: absolute;
+    visibility: hidden;
+    outline: 0;
+    position: fixed;
     right: 12.5rem;
     bottom: 15rem;
     border-radius: 50%;
@@ -321,6 +340,8 @@ main{
     display: inline-block;
 }
 .buttonLike{
+    visibility: hidden;
+    outline: 0;
     position: absolute;
     bottom: 1rem;
     left: 90%;
@@ -335,6 +356,8 @@ main{
     border-radius: 0.5rem;
 }
 .buttonEdit{
+    visibility: hidden;
+    outline: 0;
     position: absolute;
     bottom: 1rem;
     left: 2rem;
@@ -348,6 +371,8 @@ main{
     border-radius: 0.5rem;
 }
 .buttonDelete{
+    visibility: hidden;
+    outline: 0;
     position: absolute;
     bottom: 1rem;
     left: 4rem;
@@ -362,6 +387,7 @@ main{
 }
 
 .buttonMore{
+    outline: 0;
     position: relative;
     margin-top: 1rem;
     margin-bottom: 1.2rem;
@@ -373,4 +399,167 @@ main{
     color: rgba(51, 0, 102, 1);
     background-color: rgba(51, 0, 102, 0.15);
     border-radius: 10rem;
+}
+
+.AddNewPost{
+    visibility: hidden;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+}
+
+.formNewPost{
+    position: relative;
+    background-color: rgba(30, 0, 70, 1);
+    left: 22.5%;
+    top: 20%;
+    width: 51%;
+    height: 50%;
+    z-index: 3;
+    border-radius: 1rem;
+}
+
+.nameUser{
+    position:relative;
+    text-align: left;
+    top: 0.7rem;
+    left: 5%;
+    font-size: 1.5rem;
+    color: rgba(255, 255, 255, 1);
+    font-family: Amiko;
+}
+
+.formDescription{
+    position: relative;
+    font-size: 2rem;
+    background-color: rgba(146, 143, 143, 0.7);
+    font-family: Amiko;
+    resize: none;
+    left: 5%;
+    margin-top: 2%;
+    width: 90%;
+    height:40%;
+    border: none;
+    border-radius: 0.8rem;
+}
+
+.formHashtags{
+    position: relative;
+    font-size: 1.5rem;
+    background-color: rgba(146, 143, 143, 0.7);
+    font-family: Amiko;
+    resize: none;
+    left: 5%;
+    margin-top: 1%;
+    width: 90%;
+    height:10%;
+    border: none;
+    border-radius: 0.8rem;
+    z-index: 5;
+}
+
+.buttonPublish{
+    outline: 0;
+    position: relative;
+    margin-top: 5%;
+    left: 60%;
+    text-align: center;
+    font-size:1.3rem;
+    width: 15%;
+    height: 10%;
+    font-family: Amiko;
+    color: rgb(146, 143, 143);
+    background-color: white;
+    border-radius: 10rem;
+    z-index: 5;
+}
+
+.buttonCancel{
+    outline: 0;
+    position: relative;
+    margin-top: 5%;
+    left: 10%;
+    text-align: center;
+    font-size:1.3rem;
+    width: 15%;
+    height: 10%;
+    font-family: Amiko;
+    color: rgb(146, 143, 143);
+    background-color: white;
+    border-radius: 10rem;
+    z-index: 5;
+}
+
+/*.buttonLoadPhoto{*/
+/*    outline: 0;*/
+/*    position: relative;*/
+/*    margin-top: 5%;*/
+/*    left: 10%;*/
+/*    text-align: center;*/
+/*    font-size:1.3rem;*/
+/*    width: 15%;*/
+/*    height: 10%;*/
+/*    font-family: Amiko;*/
+/*    color: rgb(146, 143, 143);*/
+/*    background-color: white;*/
+/*    border-radius: 10rem;*/
+/*    z-index: 5;*/
+/*}*/
+
+.authorizationField{
+    visibility: hidden;
+    position: fixed;
+    color: rgba(0, 0, 0, 1);
+    right: 12.5rem;
+    top: 1rem;
+    width: 20%;
+    height: 20%;
+    z-index: 4;
+}
+
+.usernameField{
+    position: relative;
+    font-size: 1.2rem;
+    background-color: rgba(153, 153, 153, 0.25);
+    font-family: Amiko;
+    resize: none;
+    margin-top: 35%;
+    left: 50%;
+    width: 70%;
+    height:20%;
+    border: none;
+    border-radius: 0.8rem;
+    z-index: 5;
+}
+
+.passwordField{
+    position: relative;
+    font-size: 1.2rem;
+    background-color: rgba(153, 153, 153, 0.25);
+    font-family: Amiko;
+    resize: none;
+    margin-top: 2%;
+    left: 50%;
+    width: 70%;
+    height:20%;
+    border: none;
+    border-radius: 0.8rem;
+    z-index: 5;
+}
+
+.buttonAuthorizationEnter {
+    position: relative;
+    font-size: 1.5rem;
+    background-color: rgba(153, 153, 153, 0.5);
+    font-family: Amiko;
+    resize: none;
+    margin-top: 2%;
+    left: 70%;
+    width: 30%;
+    height: 20%;
+    border: none;
+    border-radius: 0.8rem;
+    z-index: 5;
 }
